--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -35,8 +35,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="/">Agregar Productos</a>
-              <a class="nav-link" href="/productos">Ver Productos</a>
+              <a class="nav-link" href="/">Productos</a>
             </div>
           </div>
         </div>
@@ -54,5 +53,7 @@
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
       crossorigin="anonymous"
     ></script>
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="/scripts/socket.js"></script>
   </body>
 </html>
